# source2-asset-assembler

./: .gitignore  README.md  __init__.py  assetbuilder.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
examples/: eventhandler.kv3  eventhandler.vpulse_c  eventhandler_redi.kv3  struct_example.json
examples/pulse/: pulse_struct.json  pulsesample.vpulse  pulsesample_redi.kv3
examples/responserules/: RED2_responserule.kv3  responserule.vrr  vrr_struct.json
examples/typescript/: sourcets.vts  sourcets_redi.kv3  sourcets_stat.kv3  typescript_struct.json
s2assetassembler/: __init__.py  assetbuilder.py
tests/: main_test.py  recomp_test.py  test_general.py  test_readers.py  test_schema.py  test_usage.py  test_writers.py
tests/files/: asset1.vts_c  asset2.vmat_c  asset_minimal.vts_c  rerltest.txt
tests/files/samples/: data.kv3  data_witharrays.kv3  data_withblobs.kv3  data_withflags.kv3  edited.kv3  file.vpulse_c  flag_struct.json  red2.kv3  struct.json  struct_vkv3.json
